--- a/accesorios.html
+++ b/accesorios.html
@@ -27,20 +27,19 @@
     </header>
 <section>
     <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
-    <h1 class="titulos">nuestras remeras de marca</h1>
+    <h1 class="titulos">nuestros accesorios importados</h1>
 </section>
 <main>
-    <h2 class="subtitulos">filtrar productos</h2>
-    <!-- selector de categorias -->
-    <section class="categoria">    
-        <form action="#" method="get">
-            <label for="producto">Productos</label>
-            <select name="producto">
+    <section >
+        <h2 class="subtitulos">filtrar productos</h2>
+        <form action="#" method="get" class="selector"><!-- selector de categorias -->
+            <label for="producto" class="categoria">Productos</label>
+            <select name="producto" class="valores">
                 <option value="lentes">lentes</option>
                 <option value="anillos">anillos</option>
                 <option value="collares">collares</option>
             </select>
-            <button type="submit">Buscar</button>
+            <button type="submit" class="boton-selector">Buscar</button>
         </form>
     </section>
     <!-- productos -->
