--- a/index.html
+++ b/index.html
@@ -29,61 +29,61 @@
    <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
 </section>
 <main>
-    <h1 class="titulos">Pagina principal</h1>
+    <h1 class="titulos">OFERTAS</h1>
     <section class="contenedor-producto">
         <div class="slider">
             <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
            </div>
            <div class="producto">
-            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
                 <p class="texto">lentes 4</p>
                 <p class="texto">12.999</p>
             </a>     
             </div>
             <div class="producto">
-            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto">
-            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto">
-            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
         </div> 
     </section>
-    <h2 class="titulos">OFERTAS</h2>
-    <section class="slider"> 
+    <h2 class="titulos">Pagina principal</h2>
+    <section class="catalogo-principal"> 
             <div class="producto">
                 <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
                     <p class="texto">lentes 4</p>
@@ -108,7 +108,78 @@
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-        
+            <div class="producto">
+                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                    <p class="texto">lentes 4</p>
+                    <p class="texto">12.999</p>
+             </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                    <p class="texto">remera overside 2</p>
+                    <p class="texto">12.999</p>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                    <p class="texto">remera overside 3</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+                    <p class="texto">anillo 1</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                    <p class="texto">lentes 4</p>
+                    <p class="texto">12.999</p>
+             </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                    <p class="texto">remera overside 2</p>
+                    <p class="texto">12.999</p>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                    <p class="texto">remera overside 3</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+                    <p class="texto">anillo 1</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+                    <p class="texto">lentes 4</p>
+                    <p class="texto">12.999</p>
+             </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                    <p class="texto">remera overside 2</p>
+                    <p class="texto">12.999</p>
+                </a>
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                    <p class="texto">remera overside 3</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
+            <div class="producto">
+                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+                    <p class="texto">anillo 1</p>
+                    <p class="texto">12.999</p>
+                </a>     
+            </div>
     </section>
 </main>
 <footer>
