mejore el responsive del scss

--- a/index.html
+++ b/index.html
@@ -36,81 +36,81 @@
 </section>
 <main>
     <h1 class="titulos">OFERTAS</h1>
-    <section class="contenedor-producto">
+    <section class="contenedor-slider">
         <div class="slider">
-            <div class="producto">
+            <div class="producto-slider">
                 <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
                 <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
+            <div class="producto-slider">
                 <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
                 <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
            </div>
-           <div class="producto">
+           <div class="producto-slider">
             <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
                 <p class="texto">lentes 4</p>
                 <p class="texto">12.999</p>
             </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
                 <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
            </div>
-           <div class="producto">
+           <div class="producto-slider">
             <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
                 <p class="texto">lentes 4</p>
                 <p class="texto">12.999</p>
             </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
+            <div class="producto-slider">
             <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
@@ -120,98 +120,98 @@
     </section>
     <h2 class="titulos">Pagina principal</h2>
     <section class="catalogo-principal"> 
-            <div class="producto">
-                <a href="carrito.html" class="contenedor-catalogo"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
-            <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen">
+            <div class="producto-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
