--- a/accesorios.html
+++ b/accesorios.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="barra">
-            <div>
+            <div class="contenedor-marca">
                 <a href="index.html"><img src="./img/Urban-Crow-4-2-2025.png" alt="Logo" class="marca"> 
                 </a>
             </div>
@@ -50,73 +50,73 @@
     <!-- productos -->
     <section class="catalogo">
             <div class="producto">
-                <a href="carrito.html"><img src="img/collares (3).jpeg" alt="collar_3"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (3).jpeg" alt="collar_3"class="imagen">
                     <p class="texto">collar 3 </p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (1).jpeg" alt="lentes_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (1).jpeg" alt="lentes_1"class="imagen">
                     <p class="texto">lentes 1</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/anillos (2).jpeg" alt="anillos_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (2).jpeg" alt="anillos_4"class="imagen">
                     <p class="texto">anillo 4</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html"><img src="img/collares (2).jpeg" alt="collares_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (2).jpeg" alt="collares_2"class="imagen">
                     <p class="texto">collar 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html"><img src="img/lentes (3).jpeg" alt="lentea_3"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (3).jpeg" alt="lentea_3"class="imagen">
                     <p class="texto">lentes 3</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">   
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillos_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillos_1"class="imagen">
                     <p class="texto">anillo 1</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html"><img src="img/collares (4).jpeg" alt="collares_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (4).jpeg" alt="collares_4"class="imagen">
                     <p class="texto">collar 4</p>
                     <p class="texto"> 12.999</p> 
                  </a>    
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (2).jpeg" alt="lentes_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (2).jpeg" alt="lentes_2"class="imagen">
                     <p class="texto">lentes 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html"><img src="img/anillos (2).jfif" alt="anillos_3"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (2).jfif" alt="anillos_3"class="imagen">
                     <p class="texto">anillo 4</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes_4"class="imagen">
                     <p class="texto">lentes 4</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/collares (1).jpeg" alt="collar_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (1).jpeg" alt="collar_1"class="imagen">
                     <p class="texto">collar 1</p>
                     <p class="texto">12.999 </p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html"><img src="img/anillos (1).jpeg" alt="anillo_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jpeg" alt="anillo_2"class="imagen">
                     <p class="texto">anillo 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
