--- a/remeras.html
+++ b/remeras.html
@@ -61,67 +61,67 @@
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
                 <p class="texto">remera overside 2 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
                 <p class="texto">remera overside 3 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
                 <p class="texto">remera overside </p>
                 <p class="texto">12.99</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
                 <p class="texto">remera baby tee 3 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (1).jpg" alt="remera overside 1" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (1).jpg" alt="remera overside 1" class="imagen">
                 <p class="texto">remera Overside 1 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/baby tee (2).jpg" alt="baby tee 2" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (2).jpg" alt="baby tee 2" class="imagen">
                 <p class="texto">remera baby tee 2 </p>
                 <p class="texto">12.999</p> 
                 </a>
             </div>    
             <div class="producto">
-                 <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                 <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
                 <p class="texto">remera overside 3 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
                 <p class="texto">remera overside </p>
-                <p class="texto">>12.99</p> 
+                <p class="texto">12.99</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
                 <p class="texto">remera overside 2 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (3).jpg" alt="remera baby tee 3" class="imagen">
                 <p class="texto">remera baby tee 3</p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
                 <p class="texto">remera baby tee 1</p>
                 <p class="texto">12.999</p> 
                 </a>     
